Standard 'Charset' object can be used